[gd_scene load_steps=5 format=2]

[ext_resource path="res://create_module/content/Theorem.gd" type="Script" id=1]
[ext_resource path="res://src/visual/ei_editor/expr_item_edit.gd" type="Script" id=2]
[ext_resource path="res://theme/fonts/warning_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://theme/fonts/bold.tres" type="DynamicFont" id=4]

[node name="Theorem" type="VBoxContainer"]
margin_right = 564.0
margin_bottom = 25.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopLine" type="HBoxContainer" parent="."]
margin_right = 564.0
margin_bottom = 25.0

[node name="Exclamation" type="Label" parent="TopLine"]
margin_top = 1.0
margin_right = 17.0
margin_bottom = 24.0
rect_min_size = Vector2( 17, 17 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.72549, 0, 1 )
align = 1

[node name="Label" type="Label" parent="TopLine"]
margin_left = 21.0
margin_top = 4.0
margin_right = 89.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 4 )
text = "theorem  "

[node name="LineEdit" type="LineEdit" parent="TopLine"]
margin_left = 93.0
margin_right = 243.0
margin_bottom = 25.0
rect_min_size = Vector2( 150, 0 )
placeholder_text = "Theorem name"

[node name="Whitespace" type="Control" parent="TopLine"]
margin_left = 247.0
margin_right = 480.0
margin_bottom = 25.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="TopLine"]
margin_left = 484.0
margin_right = 534.0
margin_bottom = 25.0
disabled = true
text = "Prove"

[node name="MenuButton" type="MenuButton" parent="TopLine"]
margin_left = 538.0
margin_right = 564.0
margin_bottom = 25.0
text = "â‹®"
flat = false
items = [ "Delete", null, 0, false, false, 0, 0, null, "", false ]

[node name="BottomLine" type="HBoxContainer" parent="."]
margin_top = 29.0
margin_right = 564.0
margin_bottom = 52.0

[node name="Exclamation" type="Label" parent="BottomLine"]
margin_right = 17.0
margin_bottom = 23.0
rect_min_size = Vector2( 17, 17 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.72549, 0, 1 )
text = "!"
align = 1

[node name="Whitespace2" type="Control" parent="BottomLine"]
margin_left = 21.0
margin_right = 89.0
margin_bottom = 23.0
rect_min_size = Vector2( 68, 0 )

[node name="ExprItemEdit" type="Control" parent="BottomLine"]
margin_left = 93.0
margin_right = 93.0
margin_bottom = 23.0
script = ExtResource( 2 )
